cluster/manifests/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: infrastructure
  labels:
    app: traefik
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: web
    targetPort: web
  - port: 443
    name: websecure
    targetPort: websecure
  - port: 8080
    name: admin
    targetPort: admin
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: infrastructure
  labels:
    app: traefik
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: admin
    targetPort: admin
  selector:
    app: traefik
