cluster/manifests/traefik/traefik-health-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-health-ping
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.cliff.li`) && PathPrefix(`/ping`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
  tls: {}
